# tree-sitter-jinja2

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jinja2/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterJinja2Tests/: TreeSitterJinja2Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
